--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,11 +42,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".activity.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".AddMessageActivity"></activity>
+        <activity android:name=".activity.AddMessageActivity"></activity>
         <provider
-            android:name="MessagesContentProvider"
+            android:name=".contentProvider.MessagesContentProvider"
             android:authorities="fr.esiea.lyra"
             android:enabled="true"
             android:exported="true"></provider>
